--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/./src//assets/icons/icons8-cinema-16.png" />
+    <link rel="icon" type="image/svg+xml" href="./src//assets//icons//icons8-cinema-16.png" />
     <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover, explore, and save your favorite movies with our React-based Movie Suggestion App using the OMDB API.">
 
